force-app/objects/CumulusCI_Demo__c.object
<CustomObject>
    <description>A demo object used as part of the CumulusCI Hands on Training (HOT)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>An example of a lookup field to illustrate CumulusCI&apos;s Bulk API tasks</description>
        <inlineHelpText>What Account is this demo related to?</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CumulusCI Demos</relationshipLabel>
        <relationshipName>CumulusCI_Demos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jlantz__c</fullName>
        <label>jlantz</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPSP_is_awesome__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is NPSP awesome?</inlineHelpText>
        <label>NPSP is awesome</label>
        <type>Checkbox</type>
    </fields>
    <label>CumulusCI Demo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CumulusCI Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CumulusCI Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>